misc fixes in builder. fix for wrong font name. preps for new template chooser.
--HG--
branch : next-default

--- a/app/protected/modules/emailTemplates/widgets/assets/zurmo-zurb.css
+++ b/app/protected/modules/emailTemplates/widgets/assets/zurmo-zurb.css
@@ -111,9 +111,8 @@ table.vertical img {
 	height: 15px;
 	display:block;
 }
-table.horizontal table,
-table.horizontal img{
-	float: left;
+table.horizontal td{
+	width: auto;
 }
 table.horizontal img{
 	width:15px;
