--- a/app/themes/default/css/zurmo-cherry.css
+++ b/app/themes/default/css/zurmo-cherry.css
@@ -365,23 +365,24 @@ section {
 }
 #corp-logo {
   float: left;
-  height: 32px;
+  height: 26px;
   position: relative;
-  top: 5px;
+  top: 8px;
   color: #fff;
   font-size: 14px;
   font-weight: 500;
   display: block;
 }
 #corp-logo img {
-  max-height: 32px;
+  max-height: 26px;
+  width: auto;
   display: inline-block;
   margin-right: 10px;
 }
 #corp-logo span {
   position: relative;
-  top: -10px;
-  line-height: 32px;
+  top: -7px;
+  line-height: 26px;
   display: inline-block;
 }
 #HeaderLinksView > div {
