--- a/app/themes/default/less/zurmo.less
+++ b/app/themes/default/less/zurmo.less
@@ -272,22 +272,23 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 #corp-logo{
 	float:left;
-	height:32px;
+	height:26px;
 	position:relative;
-	top:5px;
+	top:8px;
 	color:#fff;
 	font-size:14px;
 	font-weight:500;
 	display: block;
 	img{
-		max-height:32px;
+		max-height:26px;
+		width: auto;
 		display:inline-block;
 		margin-right:10px;
 	}
 	span{
 		position: relative;
-		top: -10px;
-		line-height:32px;
+		top: -7px;
+		line-height:26px;
 		display:inline-block;
 	}
 }
